<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- верхний таб -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray"
            android:paddingBottom="@dimen/spacing_medial_24"
            android:paddingTop="@dimen/spacing_medial_24">

            <LinearLayout
                style="@style/box_container">

                <TextView
                    style="@style/text.title"
                    android:text="5"/>

                <TextView
                    style="@style/text"
                    android:text="Рейтинг"/>
            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size"
                android:layout_height="@dimen/size_medium_56"
                android:background="@color/light_gray"/>

            <LinearLayout
                style="@style/box_container.box_container_middle">

                <TextView
                    style="@style/text.title"
                    android:text="5"/>

                <TextView
                    style="@style/text"
                    android:text="Написано строчек кода"/>
            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size"
                android:layout_height="@dimen/size_medium_56"
                android:background="@color/light_gray"/>

            <LinearLayout
                style="@style/box_container">

                <TextView
                    style="@style/text.title"
                    android:text="5"/>

                <TextView
                    style="@style/text"
                    android:text="Проектов"/>
            </LinearLayout>
        </LinearLayout>

        <!-- mobile -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_phone_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"
                        android:hint="@string/mobile"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/makeCall"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/light_gray"
            android:layout_marginLeft="@dimen/spacing_larger_72"/>

        <!-- e-mail -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mail_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:text="Makweb@yandex.ru"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/sendEmail"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/light_gray"
            android:layout_marginLeft="@dimen/spacing_larger_72"/>

        <!-- Профиль в VK -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_circle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vk_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"
                        android:hint="@string/vk"
                        android:inputType="text"
                        android:text="vk.com/makeev_mihail"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/vk"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/light_gray"
            android:layout_marginLeft="@dimen/spacing_larger_72"/>

        <!-- Репозиторий -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/github_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/git_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"
                        android:hint="@string/repository"
                        android:inputType="text"
                        android:text="github.com/makweb/DevIntensive"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
e
            <ImageView
                android:id="@+id/gitHub"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/light_gray"
            android:layout_marginLeft="@dimen/spacing_larger_72"/>

        <!-- О себе -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bio_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"
                        android:hint="@string/about"
                        android:inputType="textMultiLine"
                        android:text="Начиная жизнеописание героя моего, Алексея Федоровича Карамазова, нахожусь в некотором недоумении. А именно: хотя я и называю Алексея Федоровича моим героем, но однако сам знаю, что человек он отнюдь не великий, а посему и предвижу неизбежные вопросы в роде таковых: чем же замечателен ваш Алексей Федорович, что вы выбрали его своим героем? Что сделал он такого? Кому и чем известен? Почему я, читатель, должен тратить время на изучение фактов его жизни?"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
